add google analytics

--- a/about/index.html
+++ b/about/index.html
@@ -88,13 +88,24 @@
 <![endif]-->
 
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-179517423-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
 
 
 </head>
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">云淡风轻</a>
+    <a href="/" class="logo">粒粒万象</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -201,7 +212,7 @@
     <div class="logo-wrapper">
   <a href="/" class="logo">
     
-      云淡风轻
+      粒粒万象
     
   </a>
 </div>
@@ -361,10 +372,6 @@
 
   
   
-    <span id="busuanzi_container">
-      访客数/访问量：<span id="busuanzi_value_site_uv"></span>/<span id="busuanzi_value_site_pv"></span>
-    </span>
-  
 
   
 </div>
@@ -411,8 +418,6 @@
 
 
 
-
-  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 
 
